# esusid

./: Dockerfile  Jenkinsfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
tests/: test_bot.py
